src/Acted/LegalDocsBundle/Resources/public/css/globals/menu.css
.categories-menu {
    margin: 6px 0px 12px 0px;
}
.categories-menu {
    list-style: none;
    margin-top: 19px;
    padding: 0;
    display: flex;
    display: -ms-flexbox;
    justify-content: space-between;
    margin-bottom: 10px;
}
.categories-menu li {
    display: inline-block;
}
.categories-menu li:nth-of-type(1) {
    margin: 0 0 0 22px;
}
.categories-menu li:nth-last-of-type(1) {
    margin: 0 22px 0 0;
}
.categories-menu li > a {
    font-family: LatoRegular;
    font-size: 14px;
    color: #3d4248;
    line-height: 14px;
    text-decoration: none;
    padding-bottom: 21px;
    position: relative;
    cursor: pointer;
    display: block;
}
.categories-menu li>a:after {
    content: "";
    position: absolute;
    width: 0;
    height: 4px;
    bottom: 0;
    background: #ff793e;
    left: 50%;
    z-index: 1;
    -webkit-transform: translateX(-50%);
    -moz-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    -o-transform: translateX(-50%);
    transform: translateX(-50%);

    -webkit-transition: width 0.3s;
    -moz-transition: width 0.3s;
    -ms-transition: width 0.3s;
    -o-transition: width 0.3s;
    transition: width 0.3s;
}
.categories-menu li>a:hover {
    color: #ff793e;
}
.categories-menu li>a.active:after {
    /*.categories-menu li>a:hover::after {*/
    width: 65px;
}
.search .categories-menu li>a.active:after {
    width: 100%;
}
.categories-menu li.active {
    border-bottom: 4px solid #ff793e;
    margin-bottom: -4px;
    width: 112px;
}
.categories-menu li > a {
    font-size: 16px;
    /*padding: 23px 23px 22px 22px;*/
}

/** --- HOW IT WORKS CATEGORIES MENU --- **/
.how-it-works .categories-menu li.active {
    width: 71px;
}
.how-it-works .categories-menu li.menu-block {
    padding: 0;
}

/** --- FEEDBACK CLIENT --- **/
.dashboard.client .options-menu ul {
    list-style-type: none;
    margin: 0 0 0 50px;
}
.dashboard.client .options-menu ul,
.dashboard.client .options-menu li {
    display: inline-block;
}
.dashboard.client .options-menu li a {
    color: rgba(0,0,0,.87);
}
.dashboard.client .options-menu li:hover {
    padding-bottom: 10px;
    border-bottom: 3px solid rgba(255, 121, 62, 1);
}
.dashboard.client .options-menu li:hover > a {
    text-decoration: none;
}
/** --- EVENTS MENU --- **/
.dashboard.client .events-menu {
    margin: 21px 0 21px 0;
    position: relative;
    display: inline-block;
}
.dashboard.client .events-menu ul {
    overflow: hidden;
    height: 26px;
    margin: 0 43px 0 43px;
    width: 895px;
}
.dashboard.client .new-event {
    display: inline-block;
    font-family: LatoRegular;
    font-size: 14px;
    color: rgba(24, 31, 161, 1);
    margin: 23px 10px 0 0px;
    float: right;
}
.dashboard.client .new-event:hover {
    cursor: pointer;
}
.dashboard.client .new-event > span {
    padding: 0 5px 0 0;
}
.dashboard.client .new-event > i.fa.fa-plus {
    vertical-align: middle;
}

.dashboard.client .events-menu .new-event .fa.fa-plus {
    padding: 0 0 0 11px;
}
.dashboard.client .events-menu .event-item {
    height: 26px;
    width: 169px;
    border-radius: 3px;
    border-radius: 3px;
    padding: 1px 13px 6px 0px;
    margin: 0 10px 0 0;
    overflow: hidden;
    display: inline-block;
    text-overflow: ellipsis;
    white-space: nowrap;
    vertical-align: middle;
    text-align: center;
}
.dashboard.client .events-menu .event-item a {
    font-family: LatoRegular;
    font-size: 14px;
    color: rgba(0, 0, 0, 0.87);
}
.dashboard.client .events-menu .event-item a:hover {
    text-decoration: none;
    cursor: pointer;
}
.dashboard.client .events-menu .event-item.active a {
    color: rgba(255, 255, 255, 0.87);
}
.dashboard.client .events-menu .event-item.non-active {
    background-image: -webkit-linear-gradient(left, rgba(88, 149, 243, 1) 0%, rgba(73, 79, 199, 1) 100%), -webkit-linear-gradient(left, rgba(88, 149, 243, 1) 0%, rgba(73, 79, 199, 1) 100%);
    background-image: -moz-linear-gradient(left, rgba(88, 149, 243, 1) 0%, rgba(73, 79, 199, 1) 100%), -moz-linear-gradient(left, rgba(88, 149, 243, 1) 0%, rgba(73, 79, 199, 1) 100%);
    background-image: -o-linear-gradient(left, rgba(88, 149, 243, 1) 0%, rgba(73, 79, 199, 1) 100%), -o-linear-gradient(left, rgba(88, 149, 243, 1) 0%, rgba(73, 79, 199, 1) 100%);
    background-image: linear-gradient(to right, rgba(88, 149, 243, 1) 0%, rgba(73, 79, 199, 1) 100%), linear-gradient(to right, rgba(88, 149, 243, 1) 0%, rgba(73, 79, 199, 1) 100%);
    border-left: 2px solid rgba(88, 149, 243, 1);
    border-right: 2px solid rgba(73, 79, 199, 1);
    opacity: 0.67;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    background-position: 0 0, 0 100%;
    background-repeat: no-repeat;
    -webkit-background-size: 100% 20px;
    -moz-background-size: 100% 20px;
    background-size: 100% 2px;
}
.dashboard.client .events-menu .event-item.active {
    background-image: -webkit-linear-gradient(left, rgba(88, 149, 243, 1) 0%, rgba(73, 79, 199, 1) 100%), -webkit-linear-gradient(left, rgba(88, 149, 243, 1) 0%, rgba(73, 79, 199, 1) 100%);
    background-image: -moz-linear-gradient(left, rgba(88, 149, 243, 1) 0%, rgba(73, 79, 199, 1) 100%), -moz-linear-gradient(left, rgba(88, 149, 243, 1) 0%, rgba(73, 79, 199, 1) 100%);
    background-image: -o-linear-gradient(left, rgba(88, 149, 243, 1) 0%, rgba(73, 79, 199, 1) 100%), -o-linear-gradient(left, rgba(88, 149, 243, 1) 0%, rgba(73, 79, 199, 1) 100%);
    background-image: linear-gradient(to right, rgba(88, 149, 243, 1) 0%, rgba(73, 79, 199, 1) 100%), linear-gradient(to right, rgba(88, 149, 243, 1) 0%, rgba(73, 79, 199, 1) 100%);
    color: rgba(255, 255, 255, 1);
    border: none;
}
.dashboard.client .events-menu .arrows {}
.dashboard.client .events-menu .arrows .left,
.dashboard.client .events-menu .arrows .right {
    background: url('/assets/images/arrow_media.png');
    background-size: contain;
    display: inline-block;
    height: 19px;
    width: 19px;
}
.dashboard.client .events-menu .arrows .left,
.dashboard.client .events-menu .arrows .right {
    position: absolute;
    top: 2px;
}

.dashboard.client .events-menu .arrows .left {
    transform: rotate(360deg);
    left: 0;
}
.dashboard.client .events-menu .arrows .right {
    transform: rotate(180deg);
    right: 0;
}
.dashboard.client .owl-item:hover,
.dashboard.client .events-menu .arrows .left:hover,
.dashboard.client .events-menu .arrows .right:hover {
    cursor: pointer;
}

/** --- OPTIONS MENU --- **/
.dashboard.client .options-menu {
    margin: 0 0 20px 0;
}
.dashboard.client .options-menu li {
    margin: 0 78px 0 0;
    font-family: LatoRegular;
    font-size: 16px;
    color: rgba(0, 0, 0, 0.87);
}
.dashboard.client .options-menu li.active-item {
    border-bottom: 3px solid rgba(255, 121, 62, 1);
    padding-bottom: 10px;
}
.owl-carousel {
    width: initial;
}
@media screen and (min-width: 1200px) {

}
@media screen and (max-width: 1200px) {
    .dashboard.client .new-event {
        margin: 0;
        position: absolute;
        top: 24px;
        left: 94%;
    }
    .dashboard.client .new-event > span {
        display: none;
    }
    .dashboard.client .events-menu ul {
        width: 890px;
    }
}
@media screen and (min-width: 768px) {
    .dashboard.client .options-menu .active-tab,
    .dashboard.client .options-menu input[name="options-menu-open"] {
        display: none;
    }
}
@media screen and (max-width: 991px) {
    .dashboard.client .options-menu li {
        margin: 0 40px 0 0;
    }
}
@media screen and (max-width: 768px) {
    /*.container {*/
        /*padding: 0 !important;*/
    /*}*/
    .dashboard.client .options-menu li a {
        color: #FFF;
    }
    .dashboard.client .container {
        padding: 0;
        margin: 0;
        width: 100%;
    }
    /*.dashboard.client .events-menu ul {
        margin: 0 40px;
    }*/
    .dashboard.client .events-menu .arrows .left {
        left: 10px;
    }
    .dashboard.client .events-menu .arrows .right {
        right: 10px;
    }
    .dashboard.client .events-menu .new-event .fa.fa-plus {
        padding: 0;
    }
    .categories-menu {
        display: none;
    }
    /** Options menu **/
    .dashboard.client .options-menu {
        background-color: rgba(144, 189, 223, 1);
    }
    .dashboard.client .options-menu .show-menu {
        display:block;
    }
    .dashboard.client .options-menu ul {
        position: static;
        margin: 0;
        display: none;
    }
    .dashboard.client .options-menu ul li,
    .dashboard.client .options-menu .active-tab {
        color: rgba(255, 255, 255, 1);
        font-family: LatoRegular;
        font-size: 16px;
        font-weight: 400;
    }
    .dashboard.client .options-menu ul li {
        padding: 7px 66px 7px 12px;
        width: 100%;
    }
    .dashboard.client .options-menu ul li.active-item {
        background-color: #337ab7;
        border: none;
    }
    .dashboard.client .options-menu .active-tab {
        padding: 17px 0 16px 12px;
        margin: 0;
        border: none;
        width: 100%;
    }
    .dashboard.client .options-menu .fa.fa-sort-asc,
    .dashboard.client .options-menu .fa.fa-sort-desc {
        color: #FFF;
    }
    .dashboard.client .options-menu .fa.fa-sort-asc {
        margin: 6px 17px 0 0;
    }
    .dashboard.client .options-menu .fa.fa-sort-desc {
        margin: 0 17px 0 0;
    }
    .dashboard.client .options-menu input[name="options-menu-open"]:checked ~ ul {
        display: block;
    }

    .dashboard.client .options-menu input[name="options-menu-open"] ~ label i.fa.fa-sort-asc {
        display: none;
    }
    .dashboard.client .options-menu input[name="options-menu-open"] ~ label i.fa.fa-sort-desc {
        display: inline-block;
    }

    .dashboard.client .options-menu input[name="options-menu-open"]:checked ~ label i.fa.fa-sort-asc {
        display: inline-block;
    }
    .dashboard.client .options-menu input[name="options-menu-open"]:checked ~ label i.fa.fa-sort-desc {
        display: none;
    }
}
@media screen and (max-width: 860px) {
    .dashboard.client .events-menu ul {
        width: 710px;
    }
}

/* --- STYLES FOR CLIENT DASHBOARD CAROUSEL --- */
@media screen and (min-width: 1200px) {
    .dashboard.client .new-event {
        left: 85%;
    }
    .dashboard.client .events-menu ul {
        width: 920px;
    }
}
@media screen and (max-width: 1199px) {
    .dashboard.client .new-event {
        left: 85%;
    }
    .dashboard.client .events-menu {
        width: 100%;
    }
    .dashboard.client .events-menu ul {
        width: 752px;
    }
}

@media screen and (max-width: 980px) {
    .dashboard.client .new-event {
        left: 90%;
    }
    .dashboard.client .events-menu ul {
        width: 660px;
    }
}
@media screen and (max-width: 800px) {
    .dashboard.client .events-menu ul {
        /*width: 573px;*/
        width: 573px;
    }
}
@media screen and (max-width: 700px) {
    .dashboard.client .new-event {
        left: 85%;
    }
    .dashboard.client .events-menu ul {
        /*width: 573px;*/
        width: 430px;
    }
}
@media screen and (max-width: 550px) {
    .dashboard.client .events-menu ul {
        width: 358px;
    }
}
@media screen and (max-width: 500px) {
    .dashboard.client .new-event {
        left: 75%;
    }
    .dashboard.client .events-menu ul {
        width: 179px;
    }
}
@media screen and (max-width: 425px) {}
@media screen and (max-width: 320px) {}

